force-app/main/default/objects/B25__User_Setting__c/B25__User_Setting__c.object-meta.xml
<CustomObject>
    <description>This is used to save users&apos; personal settings</description>
    <label>User Setting</label>
    <nameField>
        <displayFormat>US-{000000}</displayFormat>
        <label>User Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>