force-app/main/default/objects/B25__User_Setting__c/fields/B25__Boolean_Value__c.field-meta.xml
<CustomField>
    <fullName>B25__Boolean_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the object with the ID stored in Key is shown.</description>
    <label>Boolean Value</label>
    <type>Checkbox</type>
</CustomField>