force-app/main/default/objects/B25__User_Setting__c/fields/B25__Calendar__c.field-meta.xml
<CustomField>
    <fullName>B25__Calendar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Calendar this setting belongs to used for the individually added Resources the id value is stored in the text value field.</description>
    <inlineHelpText>Le calendrier auquel appartient ce paramètre est utilisé pour les ressources ajoutées individuellement. La valeur de l’identifiant est stockée dans le champ de valeur de texte.</inlineHelpText>
    <label>Calendar</label>
    <referenceTo>B25__Calendar__c</referenceTo>
    <relationshipLabel>Added Resources</relationshipLabel>
    <relationshipName>User_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>