force-app/main/default/objects/B25__User_Setting__c/fields/B25__Filterable_Field__c.field-meta.xml
<CustomField>
    <fullName>B25__Filterable_Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The filter this is a value for, for this User.  Can also be used on hidden from Calendar filters to show different Resources based on what User is viewing the Calendar.</description>
    <inlineHelpText>Le filtre pour lequel il s’agit d’une valeur, pour cet utilisateur.</inlineHelpText>
    <label>Filterable Field</label>
    <referenceTo>B25__Filterable_Field__c</referenceTo>
    <relationshipLabel>User Values</relationshipLabel>
    <relationshipName>User_Values</relationshipName>
    <type>Lookup</type>
</CustomField>