force-app/main/default/objects/B25__User_Setting__c/fields/B25__Key__c.field-meta.xml
<CustomField>
    <fullName>B25__Key__c</fullName>
    <description>The ID of the object that this setting shows or hides.</description>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>