force-app/main/default/objects/B25__User_Setting__c/fields/B25__Text_Value__c.field-meta.xml
<CustomField>
    <fullName>B25__Text_Value__c</fullName>
    <description>The value of the filter referenced in the Filterable Field lookup.</description>
    <label>Text Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>