force-app/main/default/objects/B25__User_Setting__c/fields/B25__Type__c.field-meta.xml
<CustomField>
    <fullName>B25__Type__c</fullName>
    <description>What type of filter this setting is storing a value for.</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>