force-app/main/default/objects/B25__User_Setting__c/fields/B25__User__c.field-meta.xml
<CustomField>
    <fullName>B25__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User record to which the User Setting record applies.</description>
    <inlineHelpText>L’utilisateur auquel ces paramètres d’utilisateur s’appliquent.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>